# eomm-snake

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: Application.h  Config.h  Game.h
include/controllers/: Controller.h  GameController.h  MenuController.h
include/core/: Application.h  Game.h  Menu.h  Scoreboard.h
include/entities/: Food.h  Snake.h
include/modes/: ClassicMode.h  WrapAroundMode.h
include/ui/: Button.h  SceneFrame.h  TextInputBox.h
src/: Application.cpp  Controller.cpp  Game.cpp  main.cpp
src/controllers/: GameController.cpp  MenuController.cpp
src/core/: Application.cpp  Game.cpp  Menu.cpp  Scoreboard.cpp
src/entities/: Food.cpp  Snake.cpp
src/modes/: ClassicMode.cpp  WrapAroundMode.cpp
src/ui/: Button.cpp  SceneFrame.cpp  TextInputBox.cpp
